<resources>
    <string name="app_name">Notification</string>
    <string name="name_">Name</string>
    <string name="signup_btn_">SIGN UP</string>
    <string name="register_name_">Name</string>
    <string name="email_">Email</string>
    <string name="phone_">Telephone</string>
    <string name="password_">Password</string>
    <string name="re_password_">Re-type Password</string>
    <string name="register_">REGISTER</string>
    <string name="cancel_">CANCEL</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
</resources>
